--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/bbleds/travis-test#readme",
   "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "chai": "^3.5.0",
     "mocha": "^2.4.5"
   }
