--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node_modules/.bin/mocha --harmony_destructuring tests"
+    "test": "node_modules/.bin/mocha --harmony_destructuring tests",
+    "cover": "node --harmony-destructuring ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha tests",
+    "coveralls": "npm run cover && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,9 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.5.0",
-    "mocha": "^2.4.5"
+    "coveralls": "^2.11.6",
+    "istanbul": "^0.4.2",
+    "mocha": "^2.4.5",
+    "mocha-lcov-reporter": "^1.0.0"
   }
 }
